Profile picture navbar alignment fix

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -58,5 +58,9 @@ header {
 //   cursor: pointer;
 // }
 
+.navbar-profile-picture {
+  position: relative;
+  top: -10px;
+}
 
 
